# grecov

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  cran.yml  pages.yml  test.yml
docs/: index.html
exps/: bench_bfs.py  figures.py
profiling/: README.md  bench_bfs.py  profile_bfs.py  xctrace_profile.sh
r-package/: DESCRIPTION  LICENSE  NAMESPACE
r-package/R/: bfs.R  confidence_interval.R  install.R  multinomial_ci.R  onload.R
r-package/tests/: testthat.R
r-package/tests/testthat/: setup.R  test-bfs.R  test-confidence_interval.R  test-multinomial_ci.R
src/ext/: grecov_ext.cpp
src/grecov/: __init__.py  bfs.py  solver.py
tests/: test_bfs.py  test_coverage.py  test_cp.py  test_interfaces.py
